# droneswarm

./: .gitignore  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  build-wasm-cpp.sh  build.sh  deploy  deploy_model.sh  dev.sh  plan.md  run  train_config.json
drone-lib/: Cargo.toml  README.md
drone-lib/src/: inference.rs  lib.rs  main.rs  sim_runner.rs  test_utils.rs  utils.rs
drone-lib/src/agent/: drone_agent.rs  formation_navigator.rs  mod.rs  traits.rs
drone-lib/src/behaviors/: factory.rs  mod.rs  orca.rs  potential_field.rs  safety.rs  separation.rs  velocity_obstacle.rs
drone-lib/src/doctrine/: mod.rs
drone-lib/src/game/: action_mapping.rs  action_mask.rs  collision.rs  config.rs  engine.rs  mod.rs  obs_encoding.rs  obs_layout.rs  patrol.rs  result.rs  reward.rs  rng.rs  state.rs  task_processing.rs  tests.rs
drone-lib/src/messages/: message.rs  mod.rs
drone-lib/src/missions/: command.rs  mod.rs  parameterized_path.rs  planner.rs  task.rs  traits.rs
drone-lib/src/models/: drone.rs  fixed_wing.rs  mod.rs  quadcopter.rs
drone-lib/src/platform/: generic.rs  mod.rs  traits.rs
drone-lib/src/strategies/: attack_zone.rs  defend_area.rs  mod.rs  patrol_perimeter.rs
drone-lib/src/swarm/: formation.rs  mod.rs  traits.rs
drone-lib/src/tasks/: attack.rs  defend.rs  evade.rs  intercept.rs  intercept_group.rs  loiter.rs  mod.rs  patrol.rs
drone-lib/src/types/: bounds.rs  mod.rs  (+6 more)
rl-train/: Cargo.toml  kickstart.py  pyproject.toml  train.py
rl-train/droneswarm_train/: action_mask.py  constants.py  curriculum.py  evaluate.py  model.py  normalize.py  ppo.py  rollout.py  weights.py
rl-train/results/: best_model.json  checkpoint_10.json  checkpoint_100.json  checkpoint_1000.json  checkpoint_1050.json  checkpoint_1100.json  checkpoint_1150.json  checkpoint_1200.json  checkpoint_1250.json  checkpoint_1350.json  checkpoint_1400.json  checkpoint_1450.json  checkpoint_15.json  checkpoint_150.json  checkpoint_1500.json  checkpoint_1550.json  checkpoint_1600.json  checkpoint_1650.json  checkpoint_1700.json  checkpoint_1750.json  checkpoint_1800.json  checkpoint_1850.json  checkpoint_1900.json  checkpoint_1950.json  checkpoint_20.json  checkpoint_200.json  checkpoint_25.json  checkpoint_250.json  checkpoint_30.json  checkpoint_300.json  checkpoint_35.json  checkpoint_350.json  checkpoint_40.json  checkpoint_400.json  checkpoint_450.json  checkpoint_5.json  checkpoint_50.json  checkpoint_500.json  checkpoint_550.json  checkpoint_600.json  (+8 more)
rl-train/src/: checkpoint_pool.rs  curriculum.rs  evaluate.rs  lib.rs  main.rs  mlp.rs  normalize.rs
rl-train/tests/: test_attention.rs  test_gae.rs  test_gradient_check.rs  test_mixer.rs  test_mlp.rs  test_obs_v2.rs  test_observation.rs  test_policy_v2.rs
wasm-lib/: Cargo.toml
wasm-lib/src/: formation.rs  lib.rs  render.rs  spawn.rs  types.rs  world_scale.rs
(+81 files in other folders)
