[workspace]
members = ["drone-lib", "wasm-lib", "rl-train"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

# Training binary: max performance
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

# WASM: optimize for size
[profile.release.package.wasm-lib]
opt-level = "s"
