[package]
name = "drone-lib"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "drone-sim"
path = "src/main.rs"

[features]
inference = ["serde", "serde_json"]

[dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
env_logger = "0.11"
