[package]
name = "drone-lib"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "drone-sim"
path = "src/main.rs"

[features]
inference = ["serde", "serde_json"]

[dependencies]
log = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[dev-dependencies]
env_logger = "0.11"
