[package]
name = "rl-train"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "train"
path = "src/main.rs"

[[bin]]
name = "evaluate"
path = "src/evaluate.rs"

[dependencies]
drone-lib = { path = "../drone-lib", features = ["inference"] }
rand = "0.8"
rand_chacha = "0.3"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
