[package]
name = "wasm-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.67"
wasm-bindgen = "0.2.90"
drone-lib = { path = "../drone-lib" }
serde-wasm-bindgen = "0.6.3"
serde = "1.0.195"
