[package]
name = "wasm-lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.67"
wasm-bindgen = "0.2.90"
web-sys = { version = "0.3.67", features = ["console"] }
drone-lib = { path = "../drone-lib", features = ["inference"] }
serde-wasm-bindgen = "0.6.3"
serde = { workspace = true }
console_error_panic_hook = "0.1"
